--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offer website</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="banner-container">
+        <div class="banner-contant">
+            <p>Happy New Year</p>
+            <h1>New Year Party <br> 
+                Celebration</h1>
+        </div>
     </header>
     <main>
     </main>
